<resources>
    <string name="app_name">TimeTracker</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">TimeTracker</string>
    <string name="add_task">Add Task</string>
    <string name="add_project">Add Project</string>
    
    
    <string name="hello">Hello World, Todo!</string>
	<string name="menu_insert">Add Item</string>
	<string name="menu_delete">Delete Task</string>
	<string name="menu_edit">Edit Task</string>
	<string name="todo_description">Delete Todo</string>
	<string name="todo_edit_summary">Activity Name</string>
	<string name="todo_edit_description">Priority (0 is highest)</string>
	<string name="todo_edit_confirm">Confirm</string>
	<string name="time_default">00:00:00</string>
	<string name="util_string">Util(%)</string>
	<string name="is_productive">Productive?</string>
	<string name="pref_hh">HH</string>
	<string name="pref_mm">mm</string>
	<string name="pref_text">Reset-Time</string>
	<string name="pref_text_desc">Time (HHMM) to reset and archive timers</string>
	<string name="dev_text">Creative Commons Attribution License (https://github.com/DarkCthulhu/timeManager)</string>
	<string name="about_text">About</string>
	
	<string name="app_default_state">TT - Stopped</string>
	
	<!--  widget strings -->
	<string name="current_task">Current Task </string>
	<string name="no_task">-</string>
	<string name="current_util">Current Eff (%)</string>
	<string name="no_util">0</string>
</resources>